Fixed formatting issues on Research page, especially on mobile.

--- a/src/app/research-area/research-area.component.css
+++ b/src/app/research-area/research-area.component.css
@@ -1,16 +1,16 @@
 .research-area-container {
   display: flex;
-  background-color: #212121;
+  padding: 40px 20px;
 }
 
 .research-area-content {
-    margin: 20px;
     width: 60%;
 }
 
 .research-area-image img {
     max-width: 500px;
     width: stretch;
+    margin: 0px 0px 0px 20px;
 }
 
 .research-area-description {
@@ -28,9 +28,14 @@
   .research-area-container {
     display: flex;
     flex-direction: column-reverse;
+    padding: 20px;
   }
 
   .research-area-content {
     width: 100%;
+  }
+
+  .research-area-image img {
+    margin: 0px 0px 20px 0px;
   }
 }
